testdata/zkc/invalid/for_invalid_03.zkc
;;error:4:19-20:unknown comparator
fn f(x:u8) -> (r:u8) {
  r = 0
  for i:u8 = 0; i = x; i = i + 1 {
    r = r + 1
  }
  return
}
